[package]
name = "polyphon"
version = "1.0.0"
edition = "2024"
description = "Implementation of phonetic Polyphon algorithm"
license = "MIT"
authors = ["Pavel Petrov <pavel09piatrov@gmail.com>"]
repository = "https://github.com/krokochik/polyphon-rs"
readme = "README.md"
keywords = ["phonetic", "russian", "polyphon"]
categories = ["algorithms", "science"]

[dependencies]
unicode-normalization = "0.1.20"
phf = { version = "0.13.1", features = ["macros"] }
once_cell = "1.21.3"